...
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="20dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/add"
        android:src="@android:drawable/ic_input_add"
...
